SUBDIRS = dtndht
DIST_SUBDIRS = dtndht

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = dtndht.pc

# debian files for package building
EXTRA_DIST= \
	debian/compat \
	debian/dtndht-dev.install \
	debian/copyright \
	debian/changelog \
	debian/rules \
	debian/dtndht1.dirs \
	debian/control \
	debian/docs \
	debian/source \
	debian/source/format \
	debian/dtndht1.install \
	debian/dtndht-dev.dirs
 
ACLOCAL_AMFLAGS = -I m4
